Some zIndexing issues with the scene. We can solve that later, need to double check whether this is just an issue with the Orbit controls since it needs me to grab the scene - placing the scene behind the DOM via a negative one zIndex might be causing problems. Not sure if that's the case were I to feed cursor coordinates (or something) into useFrame

--- a/src/Landing/Name/styles/Name.css
+++ b/src/Landing/Name/styles/Name.css
@@ -1,6 +1,7 @@
 nav {
     position: fixed !important;
-    top: 0;
+
+    top: 2rem;
     right: 0;
 
     padding-right: 2rem;
